Assorted fixes (#128)
* Comment out debug output
* Fix the arrow wrappers covering buttons in videos

--- a/styles/main/_imageview.scss
+++ b/styles/main/_imageview.scss
@@ -166,4 +166,11 @@
 		}
 	}
 
+	// We must not allow the wide next/prev arrow wrappers to cover the
+	// on-screen buttons in videos.  This is imperfect as now the video
+	// covers part of the background image.
+	video {
+		z-index: 1;
+	}
+
 }
